<resources>
    <string name="app_name">Information Security</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Information Security</string>
    <string name="nav_header_subtitle">maksym.halych.shi.2022@lpnu.ua</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lab1">Lab 1</string>
    <string name="menu_lab2">Lab 2</string>
    <string name="menu_lab3">Lab 3</string>
    <string name="how_many_numbers_to_generate">How many numbers to generate?</string>
    <string name="how_many_pairs_to_generate">How many pairs to generate?</string>
    <string name="generate">Generate</string>
    <string name="estimate_pi">Estimate Pi</string>
    <string name="save_to_file">Save to file</string>
    <string name="lehmer_generator">Generate using Lehmer Random Number Generator</string>
    <string name="standard_lib_generator">Generate using Standard Kotlin Random Number Generator</string>
    <string name="use_standard_library_implementation">Use standard library implementation</string>
    <string name="input_string">Input string</string>
    <string name="hash">Hash</string>
    <string name="save_output_to_file">Save output to file</string>
    <string name="choose_file">Choose file</string>
    <string name="check_file_hash">Check file hash</string>
    <string name="compare_with_hash_in_file">Compare with hash in file</string>
    <string name="passphrase">Passphrase</string>
    <string name="encrypt_file">Encrypt File</string>
    <string name="decrypt_file">Decrypt File</string>
    <string name="menu_lab4">Lab 4</string>
    <string name="load_public_key">Load public key</string>
    <string name="load_private_key">Load private key</string>
    <string name="generate_keys">Generate Keys</string>
    <string name="save_public_key">Save Public Key</string>
    <string name="save_private_key">Save Private Key</string>
    <string name="menu_lab5">Lab 5</string>
    <string name="sign">Sign</string>
    <string name="sign_file">Sign file</string>
    <string name="check_file_signature">Check file signature</string>
    <string name="save_signature">Save signature</string>
    <string name="load_signature">Load signature</string>
    <string name="verify_file_signature">Verify file</string>
    <string name="verify">Verify</string>
    <string name="hash_file">Hash file</string>
    <string name="verify_file_hash">Verify file hash</string>
    <string name="verify_signature">Verify Signature</string>
    <string name="private_key">Private key</string>
    <string name="public_key">Public key</string>
    <string name="signature">Signature</string>
    <string name="generated_numbers">Generated numbers</string>
</resources>