<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lab1"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_lab1" />
        <item
            android:id="@+id/nav_lab2"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_lab2" />
        <item
            android:id="@+id/nav_lab3"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_lab3" />
        <item
            android:id="@+id/nav_lab4"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_lab4" />
    </group>
</menu>