<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_lab1">

    <fragment
        android:id="@+id/nav_lab1"
        android:name="com.example.informationsecurity.ui.lab1.Lab1Fragment"
        android:label="@string/menu_lab1"
        tools:layout="@layout/fragment_lab1" />

    <fragment
        android:id="@+id/nav_lab2"
        android:name="com.example.informationsecurity.ui.lab2.Lab2Fragment"
        android:label="@string/menu_lab2"
        tools:layout="@layout/fragment_lab2" />

    <fragment
        android:id="@+id/nav_lab3"
        android:name="com.example.informationsecurity.ui.lab3.Lab3Fragment"
        android:label="@string/menu_lab3"
        tools:layout="@layout/fragment_lab3" />
</navigation>