<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.lab4.Lab4Fragment">

    <Button
        android:id="@+id/btnEncryptFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypt_file"
        app:layout_constraintEnd_toStartOf="@+id/btnGenerateKeys"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGenerateKeys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_keys"
        app:layout_constraintEnd_toStartOf="@+id/btnDecryptFile"
        app:layout_constraintStart_toEndOf="@+id/btnEncryptFile"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnDecryptFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypt_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGenerateKeys"
        app:layout_constraintTop_toTopOf="@+id/btnEncryptFile" />

    <Button
        android:id="@+id/btnSavePublicKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save_public_key"
        app:layout_constraintEnd_toStartOf="@+id/btnLoadPublicKey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEncryptFile" />

    <Button
        android:id="@+id/btnLoadPublicKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_public_key"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSavePublicKey"
        app:layout_constraintTop_toTopOf="@+id/btnSavePublicKey" />

    <ScrollView
        android:id="@+id/scrollPublicKey"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSavePublicKey">

        <TextView
            android:id="@+id/tvPublicKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="18sp" />

    </ScrollView>

    <Button
        android:id="@+id/btnSavePrivateKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_private_key"
        app:layout_constraintEnd_toStartOf="@+id/btnLoadPrivateKey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollPublicKey" />

    <Button
        android:id="@+id/btnLoadPrivateKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_private_key"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSavePrivateKey"
        app:layout_constraintTop_toBottomOf="@+id/scrollPublicKey" />

    <ScrollView
        android:id="@+id/scrollPrivateKey"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSavePrivateKey">

        <TextView
            android:id="@+id/tvPrivateKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="18sp" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
