<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.lab3.Lab3Fragment">

    <EditText
        android:id="@+id/etPassphrase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Hello world"
        android:hint="@string/passphrase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEncryptFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypt_file"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassphrase" />

    <Button
        android:id="@+id/btnDecryptFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypt_file"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEncryptFile" />

</androidx.constraintlayout.widget.ConstraintLayout>
