<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.fragments.lab2.Lab2Fragment">

    <EditText
        android:id="@+id/etInputString"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Hello world"
        android:hint="@string/input_string"
        app:layout_constraintEnd_toStartOf="@+id/btnHash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnHash" />

    <Button
        android:id="@+id/btnHash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollOutput"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHash">

        <TextView
            android:id="@+id/tvOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="18sp" />

    </ScrollView>


    <Button
        android:id="@+id/btnSaveOutputToFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save_output_to_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollOutput" />


</androidx.constraintlayout.widget.ConstraintLayout>